yaml/media/06-sonarr-deployment.yaml
---
## sonarr
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsGroup: 568
        runAsUser: 568
      containers:
      - name: sonarr
        image: "ghcr.io/k8s-at-home/sonarr:v3.0.6.1342"
        #image: "ghcr.io/k8s-at-home/sonarr:v3.0.6.1265"
        imagePullPolicy: IfNotPresent
        ports:
          - name: sonarr
            containerPort: 8989
            protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: media
            subPath: config/sonarr
          - mountPath: /downloads
            name: media
            subPath: downloads/transmission
          - mountPath: /tv
            name: media
            subPath: library/tv
        resources:
          limits:
            cpu: 0.5
            memory: 400Mi
          requests:
            cpu: 0.1
            memory: 200Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        kubernetes.io/role: worker
