yaml/media/07-radarr-deployment.yaml
---
## radarr
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext: {}
        #runAsGroup: 568
        #runAsUser: 568
      containers:
        - name: radarr
          image: "ghcr.io/linuxserver/radarr:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: radarr
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: media
              subPath: config/radarr
            - mountPath: /downloads
              name: media
              subPath: downloads/transmission
            - mountPath: /movies
              name: media
              subPath: library/movies
          resources:
            limits:
              cpu: 0.5
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 128Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        disktype: external
        kubernetes.io/role: worker
