yaml/media/08-jackett-deployment.yaml
---
## jackett
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app.kubernetes.io/name: jackett
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jackett
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jackett
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsGroup: 568
        runAsUser: 568
      containers:
      - name: jackett
        image: "ghcr.io/k8s-at-home/jackett:v0.18.303"
        imagePullPolicy: IfNotPresent
        ports:
        - name: jackett
          containerPort: 9117
          protocol: TCP
        volumeMounts:
          - mountPath: /downloads
            name: media
            subPath: downloads/jackett
          - mountPath: /config
            name: media
            subPath: config/jackett
        resources:
          requests:
            cpu: 20m
            memory: 120Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        disktype: external
        kubernetes.io/role: worker
