yaml/media/09-bazarr-deployment.yaml
---
## bazarr
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/name: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsGroup: 568
        runAsUser: 568
      containers:
      - name: bazarr
        image: "ghcr.io/k8s-at-home/bazarr:v0.9.5"
        imagePullPolicy: IfNotPresent
        ports:
        - name: bazarr
          containerPort: 6767
          protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: media
            subPath: config/bazarr
          - mountPath: /media
            name: media
            subPath: library
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
          limits:
            cpu: 300m
            memory: 1000Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        disktype: external
        kubernetes.io/role: worker
