yaml/media/10-lidarr-deployment.yaml
---
## lidarr
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  labels:
    app.kubernetes.io/name: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsGroup: 568
        runAsUser: 568
      containers:
      - name: lidarr
        image: "ghcr.io/k8s-at-home/lidarr:v1.0.0.2226"
        imagePullPolicy: IfNotPresent
        ports:
          - name: lidarr
            containerPort: 8686
            protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: media
            subPath: config/lidarr
          - mountPath: /downloads
            name: media
            subPath: downloads/transmission
          - mountPath: /music
            name: media
            subPath: library/music
        resources:
          limits:
            cpu: 0.5
            memory: 400Mi
          requests:
            cpu: 0.1
            memory: 200Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        kubernetes.io/role: worker
