yaml/media/10-plex-deployment.yaml
---
## plex
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app.kubernetes.io/name: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsGroup: 568
        runAsUser: 568
      containers:
      - name: plex
        image: "ghcr.io/k8s-at-home/plex:v1.23.2.4656-85f0adf5b"
        imagePullPolicy: IfNotPresent
        ports:
        - name: dnla-tcp
          containerPort: 32469
          protocol: TCP
        - name: dnla-udp
          containerPort: 1900
          protocol: TCP
        - name: plex-http
          containerPort: 32400
          protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: media
            subPath: config/plex
          - mountPath: /transcode
            name: media
        resources:
          requests:
            cpu: 600m
            memory: 150Mi
          limits:
            cpu: 1200m
            memory: 512Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        disktype: external
        kubernetes.io/role: worker
