yaml/media/13-readarr-deployment.yaml
---
## readarr
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  labels:
    app.kubernetes.io/name: readarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: readarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: readarr
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsGroup: 568
        runAsUser: 568
      containers:
      - name: readarr
        image: "ghcr.io/k8s-at-home/readarr:v0.1.0.935"
        imagePullPolicy: IfNotPresent
        ports:
          - name: readarr
            containerPort: 8787
            protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: media
            subPath: config/readarr
          - mountPath: /downloads
            name: media
            subPath: downloads/transmission
          - mountPath: /books
            name: media
            subPath: library/books
        resources:
          limits:
            cpu: 0.5
            memory: 400Mi
          requests:
            cpu: 0.1
            memory: 200Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        disktype: external
        kubernetes.io/role: worker
